# CoolCompiler

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
examples/: stack_machine.cl
include/: utils.h
include/AST/: AST.h  AST_Printer.h
include/lexer/: Lexer.h  Regexes.h  Token.h
include/parser/: Parser.h  symbols.h
include/semant/: Semant.h
reference/lib/: trap.handler
src/: utils.h
src/AST/: AST.h  AST_Printer.h
src/codegen/: Codegen.cpp  Codegen.h  codegen.cpp  instructions.h
src/codegen/MIPS32/: ASTVisitor.h  ConstantGenerator.cpp  ConstantGenerator.h  DispTableGen.cpp  DispTableGen.h  MiscGen.cpp  MiscGen.h  PrototypeGen.cpp  PrototypeGen.h  StackRepresentation.h  TextGen.cpp  TextGen.h
src/lexer/: Lexer.cpp  Lexer.h  lexer.cpp  lexer_printer.cpp
src/parser/: Parser.cpp  parser.cpp  parser_printer.cpp
src/semant/: Semant.cpp  Semant.h  semant_printer.cpp
tests/: test.py
tests/codegen_tests/: codegen_smoke_test.cpp  codegen_test.cpp  constants_smoke_test.cpp  datagen_smoke_test.cpp  disptable_smoke_test.cpp  misc_smoke_test.cpp  prototype_smoke_test.cpp  text_smoke_test.cpp
tests/codegen_tests/examples/: advanced_case.cl  advanced_case.s  advanced_le.cl  advanced_le.s  advanced_less.cl  advanced_less.s  attribute_field_and_let.cl  attribute_field_and_let.s  attribute_field_and_let_but_same.cl  attribute_field_and_let_but_same.s  attribute_usage.cl  attribute_usage.s  bad_case.cl  bad_case.s  bad_fizz_buzz.cl  bad_fizz_buzz.s  complex_loop.cl  complex_loop.s  conversation.cl  conversation.s  cool.s  dependent_init.cl  dependent_init.s  dispatch_override_static.s  equal_with_if.cl  equal_with_if.s  hello_world.cl  hello_world.s  hello_world_with_inheritance.s  hello_world_with_let.cl  hello_world_with_let.s  infinite_loop.cl  infinite_loop.s  inherited_init.cl  inherited_init.s  let_with_assigns.S  let_with_assigns.cl  let_with_assigns.s  let_with_shadowing.cl  let_with_shadowing.s  (+45 more)
tests/lexer_tests/: lexer_end_to_end_test.py  lexer_smoke_test.cpp
tests/lexer_tests/examples/: escapedunprintables.cool  invalid_program.cl  stack_machine_oneliner.cl
tests/parser_tests/: parser_end_to_end.py  parser_smoke_test.cpp
tests/parser_tests/examples/: test_priorities.cl
tests/semant_tests/: semant_end_to_end.py  semant_smoke_test.cpp
tests/semant_tests/examples/: basic.test  dot_expression_multiple.cl  field_redefinition.test  function.cl  letselftype.test  selftype_method1.test  selftype_method2.test  simple_dispatch_self_type.test  simple_int_main.cl  test_self_type.cl  test_system_classes.cl
tests/stack_tests/: stack_test.py
